[package]
name = "librmq_test"
version = "0.1.0"
authors = ["hml1006 <hml1006@qq.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tokio = { version = "0.2.19", features = ["full"] }
libc = "0.2.69"
clap = { git = "https://github.com/clap-rs/clap/" }
dashmap = "3.11.1"
lazy_static = "1.4.0"
